# agent-os

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test_curl.cpp  test_json.cpp  test_json_tool.cpp  vcpkg.json
.github/workflows/: ci.yml
bindings/python/: agentos_py.cpp  test_bindings.py
docs/: graph_design_ref.md  graph_engine_design.md  linux-dolphindb-plugin-build.md  memory_system.md
docs/design/: news_processing_example.cpp
docs/superpowers/plans/: 2026-03-18-supervisor-worker.md  2026-03-19-repo-alignment-phase-2.md  2026-03-19-runtime-hardening-phase-1.md  2026-03-19-worktree-isolation-phase1.md  2026-03-20-subworker-worktree-phase1.md  2026-03-21-p0-infrastructure.md  2026-03-21-p1-core-capabilities.md
docs/superpowers/specs/: 2026-03-17-planning-and-memory-consolidation-design.md  2026-03-18-supervisor-worker-design.md  2026-03-18-worktree-isolation-design.md  2026-03-19-dolphindb-agent-api-design.md  2026-03-19-hooks-session-skills-design.md  2026-03-19-worktree-p2-mcp-headless-design.md  2026-03-20-subworker-worktree-design.md  2026-03-21-p0-infrastructure-design.md  2026-03-21-p1-core-capabilities-design.md  2026-03-21-p2-observability-design.md
examples/: csr_graph_demo.cpp  demo.cpp  graph_demo.cpp  headless_demo.cpp  hooks_demo.cpp  mcp_demo.cpp  openai_demo.cpp  rag_agent_demo.cpp  session_demo.cpp  skills_demo.cpp  temporal_graph_demo.cpp  worktree_demo.cpp
include/agentos/: agent.hpp  agentos.hpp  planning.hpp  reflective_agent.hpp  supervisor_agent.hpp  tracing.hpp
include/agentos/bus/: agent_bus.hpp  audit_store.hpp  bus_message.hpp  sqlite_audit_store.hpp
include/agentos/context/: context.hpp
include/agentos/core/: agent_snapshot.hpp  co_executor.hpp  compat.hpp  concepts.hpp  delegation.hpp  hot_config.hpp  key_loader.hpp  log_common.hpp  log_sink.hpp  logger.hpp  plugin.hpp  prometheus.hpp  task.hpp  types.hpp  version.hpp.in
include/agentos/dashboard/: dashboard.hpp
include/agentos/headless/: runner.hpp
include/agentos/kernel/: anthropic_backend.hpp  async_http_client.hpp  http_client.hpp  llamacpp_backend.hpp  llm_kernel.hpp  ollama_backend.hpp  vcr_cassette.hpp
include/agentos/knowledge/: bm25_index.hpp  document.hpp  knowledge_base.hpp  tokenizer.hpp
include/agentos/mcp/: mcp_server.hpp
include/agentos/memory/: consolidator.hpp  duckdb_store.hpp  graph_memory.hpp  hindsight_store.hpp  memory.hpp  shared_memory.hpp  sqlite_store.hpp
include/agentos/news/: README.md  entity_extractor.hpp  news_graph_builder.hpp  news_parser.hpp  realtime_news_processor.hpp  relation_extractor.hpp
include/agentos/scheduler/: scheduler.hpp
include/agentos/security/: security.hpp
include/agentos/skills/: skill_registry.hpp
include/agentos/subworkers/: runtime.hpp
include/agentos/tools/: tool_learner.hpp  tool_manager.hpp  tool_pipeline.hpp
include/agentos/utils/: thread_pool.hpp
include/agentos/worktree/: types.hpp  worktree_manager.hpp
include/graph_engine/builder/: graph_builder.hpp
include/graph_engine/core/: immutable_graph.hpp  types.hpp
include/graph_engine/storage/: mmap_file.hpp
include/graph_engine/utils/: string_dict.hpp
plugins/dolphindb/: ASYNC_API_BRIEF.md  CMakeLists.txt  COMPILE_DEPLOY_GUIDE.md  PluginAgentOS.txt  STREAMING_API_GUIDE.md  agentOS_API_Guide.docx  agentOS_API_Guide.md  dolphindb_adapter.cpp  dolphindb_adapter.hpp  dolphindb_macros.hpp  example.dos  example_v2.dos
plugins/dolphindb/examples/: 01_quick_start.dos  02_quant_analyst.dos  03_realtime_monitor.dos  04_rag_knowledge_base.dos  05_multi_agent_workflow.dos  06_session_resume.dos  07_skill_dynamic.dos
src/bus/: agent_bus.cpp  sqlite_audit_store.cpp
src/context/: context.cpp
src/core/: agent_snapshot.cpp  co_executor.cpp  delegation.cpp  hot_config.cpp  key_loader.cpp  plugin.cpp  prometheus.cpp
src/dashboard/: dashboard.cpp
src/kernel/: anthropic_backend.cpp  async_http_client.cpp  http_client.cpp  llamacpp_backend.cpp  llm_kernel.cpp  ollama_backend.cpp  vcr_cassette.cpp
src/memory/: consolidator.cpp  memory.cpp
src/scheduler/: scheduler.cpp
src/security/: security.cpp
src/subworkers/: runtime.cpp
src/tools/: tool_learner.cpp  tool_manager.cpp  tool_pipeline.cpp
src/tracing/: tracer.cpp
src/worktree/: worktree_manager.cpp
tests/: benchmark_csr_graph.cpp  benchmark_graph_memory.cpp  benchmark_stress.cpp  fuzz_json_parse.cpp  fuzz_memory_entry.cpp  test_agent.cpp  test_agent_snapshot.cpp  test_agentos.cpp  test_anthropic_backend.cpp  test_api_fluent.cpp  test_async_http.cpp  test_audit_store.cpp  test_bm25_index.cpp  test_bus.cpp  test_compat.cpp  test_compile_safety.cpp  test_consolidator.cpp  test_context.cpp  test_coroutine.cpp  test_coverage_boost.cpp  test_csr_graph.cpp  test_dashboard.cpp  test_delegation.cpp  test_document.cpp  test_dolphindb_adapter.cpp  test_duckdb_store.cpp  test_graph_builder.cpp  test_graph_memory.cpp  test_headless.cpp  test_hindsight_store.cpp  test_hnsw_persistence.cpp  test_hooks.cpp  test_hot_config.cpp  test_http_client.cpp  test_immutable_graph.cpp  test_integration.cpp  test_key_loader.cpp  test_knowledge_base.cpp  test_llamacpp_backend.cpp  test_llm_kernel.cpp  (+34 more)
